# k3s-jupyter-environments

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  LICENSE  README.md
docker/: Dockerfile.base  Dockerfile.base.simple  Dockerfile.datascience  Dockerfile.malware  Dockerfile.pentesting  Dockerfile.security  Dockerfile.test  build-matrix.yml
environments/datascience/: environment.yml  pyproject.toml
environments/malware/: environment.yml
environments/pentesting/: environment.yml
environments/security/: environment.yml  setup.sh
kubernetes/jupyterhub/: custom-values.yaml
kubernetes/monitoring/: jupyterhub-metrics.yaml
scripts/: build-images.sh  deploy-to-k3s.sh  setup-cluster.sh  sync-environments.sh
