[project]
name = "jupyter-datascience-arm64"
version = "1.0.0"
description = "Data Science environment for JupyterHub on ARM64"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=0.990",
    "pre-commit>=2.20",
]

gpu = [
    "cupy",  # When GPU support available
    "jax[cuda]",
    "tensorflow[gpu]",
]

nlp = [
    "transformers>=4.30",
    "datasets>=2.10",
    "tokenizers>=0.13",
    "sentence-transformers>=2.2",
]

vision = [
    "timm>=0.9",
    "albumentations>=1.3",
    "segmentation-models-pytorch>=0.3",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"